--- a/Programmation/ESP_MANETTE_WEB/Code ESP/index.html
+++ b/Programmation/ESP_MANETTE_WEB/Code ESP/index.html
@@ -36,6 +36,16 @@
 			{
 				background-color: rgb(185, 185, 185);
 			}
+			#outer
+			{
+				width:100%;
+				text-align: center;
+			}
+			.inner
+			{
+				display: inline-block;
+			}
+			
 		</style>
 	</head>
 
@@ -51,21 +61,20 @@
 		<h1 >Configuration de la manette adaptée</h1>
 		<h4 >Sélectionnez un bouton puis tapez une touche (et Entrer) ou choisissez une option</h4>
 		<select name="bouton" id="bouton">
+			<optgroup class="gris" label="Dessus"></optgroup>
 			<option class="bleu" value=1>Bleu</option>
 			<option class="rouge" value=2>Rouge</option>
 			<option class="vert" value=3>Vert</option>
 			<option value=4>Blanc</option>
 			<option class="jaune" value=5>Jaune</option>
-			<option class="gris" value=6>Aux. 1</option>
-			<option class="gris" value=7>Aux. 2</option>
-			<option class="gris" value=8>Aux. 3</option>
-			<option class="gris" value=9>Aux. 4</option>
-			<option class="gris" value=10>Aux. 5</option>
-			<option class="gris" value=11>Aux. 6</option>
-            <option class="gris" value=12>Aux. 7</option>
-            <option class="gris" value=13>Aux. 8</option>
-            <option class="gris" value=14>Aux. 9</option>
-
+			<optgroup class="gris" label="Côté"></optgroup>
+			<option class="rouge" value=6>Rouge</option>
+			<option class="jaune" value=7>Jaune</option>
+			<option class="vert" value=8>Vert</option>
+			<option class="bleu" value=9>Bleu</option>
+			<optgroup class="gris" label="Auxiliaire"></optgroup>
+			<option class="gris" value=10>Aux. 1</option>
+			<option class="gris" value=11>Aux. 2</option>
 		</select>
 		<input maxlength="1" style="color:#191992 background-color:#575758" id="commande" size="30">
 		<select name="speCar" id="special">
@@ -73,6 +82,7 @@
 			<option value = 32 >ESPACE</option>
 			<option value = 1 >Clic Gauche</option>
 			<option value = 2 >Clic Droit</option>
+            <option value = 4 >Clic Milieu</option>
 			<option value = 215 >Fleche &#8594;</option>
 			<option value = 216 >Fleche &#8592;</option>
 			<option value = 218 >Fleche &#8593;</option>
@@ -82,13 +92,51 @@
 			<option value = 193 >Caps Lock</option>
 			<option value = 179 >Tab</option>
 			<option value = 178 >Backspace</option>
+			<option value = 13 >Entrer</option>
 		</select>
+
+		<p> </p>
+
+		<div id="outer">
+			<div class="inner"><button id="savebtn" >Sauvegarder</button></div>
+			<div class="inner"><button id="backbtn">Annuler</button></div>
+			<div class="inner"><button id="refreshbtn">Afficher la liste des boutons</button></div>
+		</div>
+
 		<h4 style="color:aqua">Changement(s) enregistré(s)</h4>
 		<h1 style="color:aqua" class="counter-display">0</h1>
+
 		<div style="color:lightslategray" id="output"></div>
+
+		<h3 style="color:aqua" >Configurations de touches prédéfinies pour certains jeux</h3>
+        <select name="preset" id="preset">
+			<option class="gris" value=1000>Défaut</option>
+			<option class="gris" value=1001>Farming Simulator 16</option>
+			<option class="gris" value=1002>Mario Bros Wii</option>
+            <option class="gris" value=1003>Call of Duty</option>
+		</select>
+
 		<footer>
-			<p>Jackob et Mathis 2023</p>
+			<p>Jackob B. et Mathis S. 2023</p>
 		</footer>
+
+		<h3 style="color:aqua" >Boutons du dessus</h3>
+		<h4 style="color:rgb(0, 110, 255)" id="bleu1">Bleu : </h4>
+		<h4 style="color:rgb(255, 0, 0)" id="rouge1">Rouge : </h4>
+		<h4 style="color:rgb(26, 255, 0)" id="vert1">Vert : </h4>
+		<h4 style="color:rgb(255, 255, 255)" id="blanc1">Blanc : </h4>
+		<h4 style="color:rgb(255, 238, 0)" id="jaune1">Jaune : </h4>
+
+		<h3 style="color:aqua" >Boutons sur les côtés</h3>
+		<h4 style="color:rgb(0, 110, 255)" id="bleu2">Bleu : </h4>
+		<h4 style="color:rgb(255, 0, 0)" id="rouge2">Rouge : </h4>
+		<h4 style="color:rgb(26, 255, 0)" id="vert2">Vert : </h4>
+		<h4 style="color:rgb(255, 238, 0)" id="jaune2">Jaune : </h4>
+
+		<h3 style="color:aqua" >Auxiliaires</h3>
+		<h4 style="color:rgb(185, 185, 185);" id="aux1">Aux. 1 : </h4>
+		<h4 style="color:rgb(185, 185, 185);" id="aux2">Aux. 2 : </h4>
+		
 	</div> 	
 </body>
 </html>
