--- a/Programmation/Code_Arduino_ESP8266/Code_Serveur_SPIFFS/data/index.html
+++ b/Programmation/Code_Arduino_ESP8266/Code_Serveur_SPIFFS/data/index.html
@@ -104,7 +104,7 @@
 		<h4 >Boutons du dessus</h4>
 		<label for="menuBleuD" style="color:rgb(0, 110, 255)" >Bleu :</label>
 		<select id="menuBleuD">
-			<option value = 0 ></option>
+			
 			<option value = 97 >A</option>
 			<option value = 98 >B</option>
 			<option value = 99 >C</option>
@@ -160,7 +160,7 @@
 
 		<label for="menuRougeD" style="color:rgb(255, 0, 0)"  >Rouge :</label>
 		<select id="menuRougeD">
-			<option value = 0 ></option>
+			
 			<option value = 97 >A</option>
 			<option value = 98 >B</option>
 			<option value = 99 >C</option>
@@ -216,7 +216,7 @@
 		<p> </p>
 		<label for="menuVertD" style="color:rgb(26, 255, 0)"  >Vert :</label>
 		<select id="menuVertD">
-			<option value = 0 ></option>
+			
 			<option value = 97 >A</option>
 			<option value = 98 >B</option>
 			<option value = 99 >C</option>
@@ -272,7 +272,7 @@
 
 		<label for="menuJauneD" style="color:rgb(255, 238, 0)" >Jaune :</label>
 		<select id="menuJauneD">
-			<option value = 0 ></option>
+			
 			<option value = 97 >A</option>
 			<option value = 98 >B</option>
 			<option value = 99 >C</option>
@@ -328,7 +328,7 @@
 		<p> </p>
 		<label for="menuBlancD" style="color:rgb(255, 255, 255)" >Blanc :</label>
 		<select id="menuBlancD">
-			<option value = 0 ></option>
+			
 			<option value = 97 >A</option>
 			<option value = 98 >B</option>
 			<option value = 99 >C</option>
@@ -385,7 +385,7 @@
 		<h4 >Boutons sur les côtés</h4>
 		<label for="menuBleuC" style="color:rgb(0, 110, 255)" >Bleu :</label>
 		<select id="menuBleuC">
-			<option value = 0 ></option>
+			
 			<option value = 97 >A</option>
 			<option value = 98 >B</option>
 			<option value = 99 >C</option>
@@ -441,7 +441,7 @@
 
 		<label for="menuRougeC" style="color:rgb(255, 0, 0)"  >Rouge :</label>
 		<select id="menuRougeC">
-			<option value = 0 ></option>
+			
 			<option value = 97 >A</option>
 			<option value = 98 >B</option>
 			<option value = 99 >C</option>
@@ -497,7 +497,7 @@
 		<p> </p>
 		<label for="menuVertC" style="color:rgb(26, 255, 0)"  >Vert :</label>
 		<select id="menuVertC">
-			<option value = 0 ></option>
+			
 			<option value = 97 >A</option>
 			<option value = 98 >B</option>
 			<option value = 99 >C</option>
@@ -553,7 +553,7 @@
 
 		<label for="menuJauneC" style="color:rgb(255, 238, 0)" >Jaune :</label>
 		<select id="menuJauneC">
-			<option value = 0 ></option>
+			
 			<option value = 97 >A</option>
 			<option value = 98 >B</option>
 			<option value = 99 >C</option>
@@ -610,7 +610,7 @@
 		<h4 >Auxiliaires</h4>
 		<label for="menuAux1" style="color:rgb(255, 255, 255)" >Aux. 1 :</label>
 		<select id="menuAux1">
-			<option value = 0 ></option>
+			
 			<option value = 97 >A</option>
 			<option value = 98 >B</option>
 			<option value = 99 >C</option>
@@ -666,7 +666,7 @@
 
 		<label for="menuAux2" style="color:rgb(255, 255, 255)"  >Aux. 2 :</label>
 		<select id="menuAux2">
-			<option value = 0 ></option>
+			
 			<option value = 97 >A</option>
 			<option value = 98 >B</option>
 			<option value = 99 >C</option>
@@ -719,6 +719,175 @@
 			<option value = 178 >Backspace</option>
 			<option value = 13 >Entrer</option>
 		</select>
+		<p> </p>
+		<label for="menuAux3" style="color:rgb(255, 255, 255)"  >Aux. 3 :</label>
+		<select id="menuAux3">
+			
+			<option value = 97 >A</option>
+			<option value = 98 >B</option>
+			<option value = 99 >C</option>
+			<option value = 100 >D</option>
+			<option value = 101 >E</option>
+			<option value = 102 >F</option>
+			<option value = 103 >G</option>
+			<option value = 104 >H</option>
+			<option value = 105 >I</option>
+			<option value = 106 >J</option>
+			<option value = 107 >K</option>
+			<option value = 108 >L</option>
+			<option value = 109 >M</option>
+			<option value = 110 >N</option>
+			<option value = 111 >O</option>
+			<option value =112 >P</option>
+			<option value = 113 >Q</option>
+			<option value = 114 >R</option>
+			<option value = 115 >S</option>
+			<option value = 116 >T</option>
+			<option value = 117 >U</option>
+			<option value = 118 >V</option>
+			<option value = 119 >W</option>
+			<option value = 120 >X</option>
+			<option value = 121 >Y</option>
+			<option value = 122 >Z</option>
+			<option value = 48 >0</option>
+			<option value = 49 >1</option>
+			<option value = 50 >2</option>
+			<option value = 51 >3</option>
+			<option value = 52 >4</option>
+			<option value = 53 >5</option>
+			<option value = 54 >6</option>
+			<option value = 55 >7</option>
+			<option value = 56 >8</option>
+			<option value = 57 >9</option>
+			<option value = 177 >échapp.</option>
+			<option value = 32 >ESPACE</option>
+			<option value = 1 >Clic Gauche</option>
+			<option value = 2 >Clic Droit</option>
+            <option value = 4 >Clic Milieu</option>
+			<option value = 215 >Fleche &#8594;</option>
+			<option value = 216 >Fleche &#8592;</option>
+			<option value = 218 >Fleche &#8593;</option>
+			<option value = 217 >Fleche &#8595;</option>
+			<option value = 129 >Shift</option>
+			<option value = 128 >Ctrl</option>
+			<option value = 193 >Caps Lock</option>
+			<option value = 179 >Tab</option>
+			<option value = 178 >Backspace</option>
+			<option value = 13 >Entrer</option>
+		</select>
+
+		<label for="menuAux4" style="color:rgb(255, 255, 255)"  >Aux. 4 :</label>
+		<select id="menuAux4">
+			
+			<option value = 97 >A</option>
+			<option value = 98 >B</option>
+			<option value = 99 >C</option>
+			<option value = 100 >D</option>
+			<option value = 101 >E</option>
+			<option value = 102 >F</option>
+			<option value = 103 >G</option>
+			<option value = 104 >H</option>
+			<option value = 105 >I</option>
+			<option value = 106 >J</option>
+			<option value = 107 >K</option>
+			<option value = 108 >L</option>
+			<option value = 109 >M</option>
+			<option value = 110 >N</option>
+			<option value = 111 >O</option>
+			<option value =112 >P</option>
+			<option value = 113 >Q</option>
+			<option value = 114 >R</option>
+			<option value = 115 >S</option>
+			<option value = 116 >T</option>
+			<option value = 117 >U</option>
+			<option value = 118 >V</option>
+			<option value = 119 >W</option>
+			<option value = 120 >X</option>
+			<option value = 121 >Y</option>
+			<option value = 122 >Z</option>
+			<option value = 48 >0</option>
+			<option value = 49 >1</option>
+			<option value = 50 >2</option>
+			<option value = 51 >3</option>
+			<option value = 52 >4</option>
+			<option value = 53 >5</option>
+			<option value = 54 >6</option>
+			<option value = 55 >7</option>
+			<option value = 56 >8</option>
+			<option value = 57 >9</option>
+			<option value = 177 >échapp.</option>
+			<option value = 32 >ESPACE</option>
+			<option value = 1 >Clic Gauche</option>
+			<option value = 2 >Clic Droit</option>
+            <option value = 4 >Clic Milieu</option>
+			<option value = 215 >Fleche &#8594;</option>
+			<option value = 216 >Fleche &#8592;</option>
+			<option value = 218 >Fleche &#8593;</option>
+			<option value = 217 >Fleche &#8595;</option>
+			<option value = 129 >Shift</option>
+			<option value = 128 >Ctrl</option>
+			<option value = 193 >Caps Lock</option>
+			<option value = 179 >Tab</option>
+			<option value = 178 >Backspace</option>
+			<option value = 13 >Entrer</option>
+		</select>
+		<p> </p>
+		<label for="menuAux5" style="color:rgb(255, 255, 255)"  >Aux. 5 :</label>
+		<select id="menuAux5">
+			
+			<option value = 97 >A</option>
+			<option value = 98 >B</option>
+			<option value = 99 >C</option>
+			<option value = 100 >D</option>
+			<option value = 101 >E</option>
+			<option value = 102 >F</option>
+			<option value = 103 >G</option>
+			<option value = 104 >H</option>
+			<option value = 105 >I</option>
+			<option value = 106 >J</option>
+			<option value = 107 >K</option>
+			<option value = 108 >L</option>
+			<option value = 109 >M</option>
+			<option value = 110 >N</option>
+			<option value = 111 >O</option>
+			<option value =112 >P</option>
+			<option value = 113 >Q</option>
+			<option value = 114 >R</option>
+			<option value = 115 >S</option>
+			<option value = 116 >T</option>
+			<option value = 117 >U</option>
+			<option value = 118 >V</option>
+			<option value = 119 >W</option>
+			<option value = 120 >X</option>
+			<option value = 121 >Y</option>
+			<option value = 122 >Z</option>
+			<option value = 48 >0</option>
+			<option value = 49 >1</option>
+			<option value = 50 >2</option>
+			<option value = 51 >3</option>
+			<option value = 52 >4</option>
+			<option value = 53 >5</option>
+			<option value = 54 >6</option>
+			<option value = 55 >7</option>
+			<option value = 56 >8</option>
+			<option value = 57 >9</option>
+			<option value = 177 >échapp.</option>
+			<option value = 32 >ESPACE</option>
+			<option value = 1 >Clic Gauche</option>
+			<option value = 2 >Clic Droit</option>
+            <option value = 4 >Clic Milieu</option>
+			<option value = 215 >Fleche &#8594;</option>
+			<option value = 216 >Fleche &#8592;</option>
+			<option value = 218 >Fleche &#8593;</option>
+			<option value = 217 >Fleche &#8595;</option>
+			<option value = 129 >Shift</option>
+			<option value = 128 >Ctrl</option>
+			<option value = 193 >Caps Lock</option>
+			<option value = 179 >Tab</option>
+			<option value = 178 >Backspace</option>
+			<option value = 13 >Entrer</option>
+		</select>
+		
 
 		<h4 style="color:black">_</h4>
 
